--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
+    "lint": "eslint && prettier -w .",
+    "lint:fix": "eslint --fix && prettier -w .",
     "web": "expo start --web",
     "eject": "expo eject",
     "test": "jest --watchAll"
@@ -29,17 +31,19 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-maps": "0.29.4",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
-    "react-native-web": "0.17.1",
-    "react-native-maps": "0.29.4"
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
-    "jest-expo": "~44.0.1",
+    "eslint": "^8.6.0",
     "jest": "^26.6.3",
+    "jest-expo": "~44.0.1",
+    "prettier": "^2.5.1",
     "react-test-renderer": "17.0.1",
     "typescript": "~4.3.5"
   },
