--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "lint": "eslint && prettier -w .",
-    "lint:fix": "eslint --fix && prettier -w .",
+    "lint": "eslint . && prettier -w .",
+    "lint:fix": "eslint . --fix && prettier -w .",
     "web": "expo start --web",
     "eject": "expo eject",
     "test": "jest --watchAll"
@@ -40,7 +40,14 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
     "eslint": "^8.6.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "jest": "^26.6.3",
     "jest-expo": "~44.0.1",
     "prettier": "^2.5.1",
