--- a/backend/package.json
+++ b/backend/package.json
@@ -2,15 +2,22 @@
   "name": "planhess-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^3.8.1",
     "apollo-server": "^3.6.2",
     "graphql": "^16.2.0"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.10",
+    "prisma": "^3.8.1",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.5"
   }
 }
