--- a/mobile/package.json
+++ b/mobile/package.json
@@ -10,7 +10,8 @@
     "lint:fix": "ts-standard --fix",
     "web": "expo start --web",
     "eject": "expo eject",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "prepare": "cd .. && husky install mobile/.husky"
   },
   "jest": {
     "preset": "jest-expo"
@@ -42,6 +43,7 @@
     "@types/react-native": "~0.64.12",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
     "@typescript-eslint/parser": "^5.9.1",
+    "husky": "^7.0.4",
     "jest": "^26.6.3",
     "jest-expo": "~44.0.1",
     "prettier": "^2.5.1",
