--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,12 @@
   "dependencies": {
     "@prisma/client": "^3.8.1",
     "apollo-server": "^3.6.2",
-    "graphql": "^16.2.0"
+    "graphql": "^16.2.0",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.5"
   },
   "devDependencies": {
     "@types/node": "^17.0.10",
-    "prisma": "^3.8.1",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.5"
+    "prisma": "^3.8.1"
   }
 }
