Set up android APK + google map api key

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -23,6 +23,12 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
+      },
+      "package": "com.martinmortier.planhess",
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyD7-PqF0ojoTb0yr8mQVrWhjYqF-eQCYc0"
+        }
       }
     },
     "web": {
